# LLM-Tool-Use

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py
app/core/: config.py
app/database/: __init__.py
app/models/: __init__.py
app/schemas/: __init__.py  inquiry.py
app/services/: __init__.py  batch.py  csv_extract.py  extract.py
samples/: inquiries.csv  mail01.txt  mail02.txt
scripts/: __init__.py  batch_extract.py  csv_extract.py  generate_inquiries_sample.py  run_extract.py
tests/: test_batch.py  test_csv_extract.py  test_extract.py  test_schemas.py
